fix: update RocksdbClient to use getDeclaredConstructor for options instantiation (#749)